Bug 357557 - Save attachment: Dialog does not show correct folder
Summary: Save attachment: Dialog does not show correct folder
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 5.1
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-05 07:48 UTC by Gunter Ohrner
Modified: 2016-02-06 14:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gunter Ohrner 2016-01-05 07:48:40 UTC
If viewing a mail and selecting "Save attachment" via the context menu, the "Save Attachment"-dialog will (correctly) show the previously selected folder in the address bar, albeit with the URL prefix "file:" prepended, and the actual file and folder list displayed is the user's home folder instead of the folder displayed in the address bar.

Clicking into the address bar and pressing "Enter" will select the correct folder.

Reproducible: Always
Comment 1 Martin Kostolný 2016-02-06 09:43:26 UTC
I used to suffer from this and /usr/bin folder was actually suggested (failing to resolve file://... path). After some time it is just /usr/bin always suggested to save attachment. I created a new ticket for that: https://bugs.kde.org/show_bug.cgi?id=359054
Comment 2 Laurent Montel 2016-02-06 14:01:55 UTC
Git commit 43c23ea9a360f1aafe3229975774464569d27ed2 by Montel Laurent.
Committed on 06/02/2016 at 14:01.
Pushed by mlaurent into branch 'Applications/15.12'.

Fix [kmail2] [Bug 357557] New: Save attachment: Dialog does not show correct folder

FIXED-IN: 5.1.2

M  +15   -22   messageviewer/src/utils/messageviewerutil.cpp

http://commits.kde.org/kdepim/43c23ea9a360f1aafe3229975774464569d27ed2