Fix [kmail2] [Bug 357557] New: Save attachment: Dialog does not show correct folder

FIXED-IN: 5.1.2
BUG: 357557